--- a/scss/_aboutUs.scss
+++ b/scss/_aboutUs.scss
@@ -1,7 +1,7 @@
 // Quienes somos
 
 .nosotros{
-    width:90%;
+    width:$breakPointMax;
     max-width: 1100px;
     margin: 150px auto;
     display:flex;
