--- a/scss/_form.scss
+++ b/scss/_form.scss
@@ -45,7 +45,7 @@
             }
             textarea, input{
                 display: block;
-                width:100%;
+                width:$widthTotal;
                 padding:15px;
                 border-radius: 20px !important;
                 font-size:  $smallTitle;
