--- a/scss/_heroSection.scss
+++ b/scss/_heroSection.scss
@@ -1,7 +1,7 @@
 // Hero section
 
 .heroSection{
-    width: 100%;
+    width:$widthTotal;
     height: auto;
     max-height: max-content;
     background-image: url("../img/pic1.png");
