--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -74,11 +74,6 @@
     $screenWidth:100vw;
     $screenHeight:100vh;
     $containerWidth:85%;
-    $maxWidth:1100px;
-
-
-    // p{
-    //     font-size:$h3Title;
-    //     font-weight:$boldMedium;
-    // }
-
+    $maxWidth: 1100px;
+    $breakPointMax: 90%;
+    $widthTotal:100%;
