--- a/scss/_match.scss
+++ b/scss/_match.scss
@@ -14,7 +14,7 @@
     justify-content: space-around;
     align-items: center;
     .bannerMatch{
-        width:90%;
+        width:$breakPointMax;
         max-width: 1200px;
         display: flex;
         flex-direction: row;
@@ -22,7 +22,7 @@
         align-items: center;
         margin:$neutralMargin;
         .sideCompany, .sideStaff{
-            width:100%;
+            width:$widthTotal;
             height: 100%;
             max-height: 600px;
             overflow: hidden;
@@ -105,13 +105,13 @@
                     width: 35px ;
                 }
                 .lines{
-                    width: 100%;
+                    width: $widthTotal;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-around;
                     align-items: center;
                     .line{
-                        width:100%;
+                        width:$widthTotal;
                         height: 10px;
                         background-color: $hoverColor;
                         margin: 2px auto;
